Fixed a bug with the position of the copy button, Changed the styles for the code scrollbar

--- a/noteapp/static/noteapp/css/base.css
+++ b/noteapp/static/noteapp/css/base.css
@@ -139,6 +139,7 @@ input::placeholder {
 
 header .tooltip .tooltiptext {
     top: 210%;
+    font-weight: normal;
 }
 
 
@@ -184,4 +185,18 @@ header .tooltip .tooltiptext {
 
 .submit-button-margin {
     margin-top: 25px;
+}
+
+
+input[type="file"]::-webkit-file-upload-button {
+    background-color: #3f3f3f;
+    height: 40px;
+    border-radius: 15px;
+    font-size: 15px;
+    font-family: Nunito, sans-serif;
+    border: 1px solid #fdbf2d;
+    color: #d2d2ca;
+    padding: 0 15px;
+    font-weight: bold;
+    margin-right: 15px;
 }
