--- a/noteapp/static/noteapp/css/help.css
+++ b/noteapp/static/noteapp/css/help.css
@@ -73,19 +73,14 @@
 }
 
 .example-container code::-webkit-scrollbar-track {
-    background: #303030;
-
+    background: #2a2a2a;
+    border-radius: 5px;
 }
 
 .example-container code::-webkit-scrollbar-thumb {
     background: #494949;
-    border-radius: 5px;
+    border-radius: 0 0 5px 5px;
 }
-
-/*.example-container code::-webkit-scrollbar-thumb:hover {*/
-/*    background: #ffc9c9;*/
-/*}*/
-
 
 .example-container pre {
     margin: 0;
