--- a/noteapp/static/noteapp/css/view_mode_note.css
+++ b/noteapp/static/noteapp/css/view_mode_note.css
@@ -63,13 +63,13 @@
 }
 
 .note-content code::-webkit-scrollbar-track {
-    background: #303030;
-
+    background: #2a2a2a;
+    border-radius: 5px;
 }
 
 .note-content code::-webkit-scrollbar-thumb {
     background: #494949;
-    border-radius: 5px;
+    border-radius: 0 0 5px 5px;
 }
 
 
